Update about.html with latest changes

--- a/templates/about.html
+++ b/templates/about.html
@@ -237,7 +237,7 @@
                             <span class="stat-description">Classified conditions</span>
                         </div>
                         <div class="stat-card">
-                            <span class="stat-number">{'<3s'}</span>
+                            <span class="stat-number">&lt;3s</span>
                             <span class="stat-label">Analysis</span>
                             <span class="stat-description">Processing time</span>
                         </div>
